Image stretch fixed update

--- a/Module2-solution/css/styles.css
+++ b/Module2-solution/css/styles.css
@@ -30,6 +30,14 @@
     .col-md-6{
         width: 49.43%;
     }
+    
+    #img3{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+        height: 73%;
+    }
 
 }
 @media (max-width:767px){
